# ros-system_model_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: variable.msg
srv/: initialize_state.srv  list_state_variables.srv
